# SLAE

3diagonal_matrix/: CMakeLists.txt  README.md
3diagonal_matrix/src/: CMakeLists.txt
3diagonal_matrix/src/Matrixes/: tridiagonal_matrix.cpp  tridiagonal_matrix.hpp
3diagonal_matrix/src/SLAE_Solvers/: run_solver.cpp  run_solver.hpp
3diagonal_matrix/tests/: CMakeLists.txt  test_test.cpp
Conjugate_gradient/: conjugate_gredient.hpp
dense_and_csr/: CSR.hpp  dense.hpp  tester.cpp  vector_operation.hpp
householder/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  householder.cpp  householder.hpp
simple_iteration/: Gauss_Seidel.hpp  Jacobi.hpp  Simple.hpp  test.cpp
